--- a/pagestyle.css
+++ b/pagestyle.css
@@ -126,3 +126,25 @@ a:active {text-decoration:underline;}
 iframe {
     margin: auto;
 }
+
+/*shoblo*/
+#shortblog {
+    background-color: rgb(197, 244, 255);
+    color: rgb(0, 0, 0);
+    height: auto; 
+    padding-top: 30px;
+    padding-bottom: 30px;   
+    padding-left:50px;
+    margin-left: 15px;
+    margin-right: 15px;
+    box-shadow:5px 5px 10px 5px #ccc;
+}
+
+#shobtype {
+    background-color: #2d2d2da6;
+    color: #ffffff;
+    height: 150px;
+    padding-left:50px;
+    padding-right: 0;
+    margin-top: 0%;
+}
